<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.pizazz</groupId>
	<artifactId>pizazz</artifactId>
	<version>3.0.0</version>
	<packaging>pom</packaging>

	<modules>
		<module>piz-base2</module>
		<module>piz-extraction</module>
        <module>piz-kafka</module>
<!--		<module>piz-incubation</module>-->
	</modules>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- JAVA -->
		<java.version>17</java.version>
		<!-- PIZAZZ -->
		<piz.version>3.0.0</piz.version>
		<!-- JUNIT -->
		<junit.version>4.13.2</junit.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- 编译 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<!-- 源码使用的JAVA版本 -->
					<source>${java.version}</source>
					<!-- 编译class文件的JAVA版本 -->
					<target>${java.version}</target>
					<!-- 字符集编码 -->
					<encoding>UTF-8</encoding>
					<!-- 跳过测试 true/false -->
					<skip>true</skip>
				</configuration>
			</plugin>
			<!-- 源码 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<!-- 在编译时打包 -->
						<phase>package</phase>
						<goals>
							<!-- 在绑定的phase执行 -->
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- API说明 -->
			<!-- 
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<aggregate>true</aggregate>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			 -->
		</plugins>
	</build>
</project>
